# rust_color_macros

./: Cargo.toml  README.md
examples/: 24bit_colors.rs  256colors.rs  basic_colors.rs  color256_colors.rs  eprint_styled.rs  print_styled.rs  rgb_colors.rs  write_methods.rs  write_styled.rs  write_styled_tests.rs
src/: lib.rs
