[package]
name = "color_macros"
description = "Easy-to-use macros for writing colored text to a buffer or to the terminal."
authors = ["ryanv404"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ryanv404/rust_color_macros"
keywords = ["ansi", "terminal", "colors", "macros"]
categories = ["command-line-interface"]
